# py-minisign

./: .gitignore  LICENSE  Makefile  README.rst  SECURITY.rst  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: codeql-analysis.yml  publish.yml  python-package.yml
minisign/: __init__.py  exceptions.py  helpers.py  minisign.py  test_minisign.py
tests/: test_minisign.py
